<resources>
    <string name="app_name">MP</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered">Already Registered?</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
</resources>