<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/userlogin"
        android:layout_marginTop="175dp"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/password"
        android:layout_marginTop="20dp"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/edt_cnf_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/password"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"/>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#63C8F6"
        android:text="@string/sign_up"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/already_registered"/>

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:text="@string/login"/>
    </LinearLayout>
</LinearLayout>